[tool.poetry]
name = "web2mark"
version = "0.1.0"
description = ""
authors = ["“ademenet” <alain.demenet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.11.2"
typer = "^0.12.3"
markdownify = "^0.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
